css some js changes
Fixed timeline, more css refinements. Almost there...

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -983,6 +983,32 @@
           "imported": false,
           "parents": [],
           "type": "css"
+        },
+        "7df2f2e0": {
+          "id": "7df2f2e0",
+          "path": "img/revised_intro_image.png",
+          "output": "img/revised_intro_image.png",
+          "name": "revised_intro_image.png",
+          "category": "IMAGE",
+          "size": 183771,
+          "type": "png",
+          "initialSize": 183771,
+          "optimized": false,
+          "height": 222,
+          "width": 283
+        },
+        "5def029f": {
+          "id": "5def029f",
+          "path": "img/rev_arch_cropped.png",
+          "output": "img/rev_arch_cropped.png",
+          "name": "rev_arch_cropped.png",
+          "category": "IMAGE",
+          "size": 91646,
+          "type": "png",
+          "initialSize": 91646,
+          "optimized": false,
+          "height": 201,
+          "width": 136
         }
       },
       "deploymentHistory": {},
