--- a/prepros.cfg
+++ b/prepros.cfg
@@ -24,6 +24,22 @@
           "parents": [],
           "type": "javascript"
         },
+        "62008569": {
+          "id": "62008569",
+          "path": "css/creditsstyle.css",
+          "output": "css/creditsstyle-dist.css",
+          "name": "creditsstyle.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
         "17c0d98a": {
           "id": "17c0d98a",
           "path": "credits.html",
@@ -46,27 +62,91 @@
           "parents": [],
           "type": "html"
         },
-        "737dc58e": {
-          "id": "737dc58e",
-          "path": "map.html",
-          "output": "map.html",
-          "name": "map.html",
+        "4c46eae8": {
+          "id": "4c46eae8",
+          "path": "map1.html",
+          "output": "map1.html",
+          "name": "map1.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
           "parents": [],
           "type": "html"
         },
-        "96e365bd": {
-          "id": "96e365bd",
-          "path": "satmap.html",
-          "output": "satmap.html",
-          "name": "satmap.html",
+        "c6ead12a": {
+          "id": "c6ead12a",
+          "path": "map2.html",
+          "output": "map2.html",
+          "name": "map2.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
           "parents": [],
           "type": "html"
+        },
+        "3787bd18": {
+          "id": "3787bd18",
+          "path": "css/introstyle.css",
+          "output": "css/introstyle-dist.css",
+          "name": "introstyle.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "35b27952": {
+          "id": "35b27952",
+          "path": "css/lightbox.css",
+          "output": "css/lightbox-dist.css",
+          "name": "lightbox.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "82b9e67d": {
+          "id": "82b9e67d",
+          "path": "css/map1style.css",
+          "output": "css/map1style-dist.css",
+          "name": "map1style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "265c7aea": {
+          "id": "265c7aea",
+          "path": "css/map2style.css",
+          "output": "css/map2style-dist.css",
+          "name": "map2style.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
         },
         "12e535de": {
           "id": "12e535de",
@@ -100,70 +180,6 @@
           "parents": [],
           "type": "css"
         },
-        "ea3340c3": {
-          "id": "ea3340c3",
-          "path": "css/satstyle.css",
-          "output": "css/satstyle-dist.css",
-          "name": "satstyle.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "0c7b55b5": {
-          "id": "0c7b55b5",
-          "path": "css/style.css",
-          "output": "css/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "fd38604e": {
-          "id": "fd38604e",
-          "path": "css/style2.css",
-          "output": "css/style2-dist.css",
-          "name": "style2.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "3d97e707": {
-          "id": "3d97e707",
-          "path": "css/style3.css",
-          "output": "css/style3-dist.css",
-          "name": "style3.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
         "741f7fd9": {
           "id": "741f7fd9",
           "path": "img/full.htm",
@@ -174,6 +190,36 @@
           "imported": false,
           "parents": [],
           "type": "htm"
+        },
+        "49a24ab7": {
+          "id": "49a24ab7",
+          "path": "js/credits.js",
+          "output": "js/credits-dist.js",
+          "name": "credits.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "3193210d": {
+          "id": "3193210d",
+          "path": "js/intro.js",
+          "output": "js/intro-dist.js",
+          "name": "intro.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         },
         "de5ffe1d": {
           "id": "de5ffe1d",
@@ -205,11 +251,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "50ef0fa9": {
-          "id": "50ef0fa9",
-          "path": "js/main.js",
-          "output": "js/main-dist.js",
-          "name": "main.js",
+        "ce03571c": {
+          "id": "ce03571c",
+          "path": "js/map1.js",
+          "output": "js/map1-dist.js",
+          "name": "map1.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -220,26 +266,11 @@
           "parents": [],
           "type": "javascript"
         },
-        "759eb1de": {
-          "id": "759eb1de",
-          "path": "js/main2.js",
-          "output": "js/main2-dist.js",
-          "name": "main2.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "bb50bbd7": {
-          "id": "bb50bbd7",
-          "path": "js/main3.js",
-          "output": "js/main3-dist.js",
-          "name": "main3.js",
+        "c3670c05": {
+          "id": "c3670c05",
+          "path": "js/map2.js",
+          "output": "js/map2-dist.js",
+          "name": "map2.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -255,21 +286,6 @@
           "path": "js/mapbox.js",
           "output": "js/mapbox-dist.js",
           "name": "mapbox.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "2c6840bd": {
-          "id": "2c6840bd",
-          "path": "js/satmain.js",
-          "output": "js/satmain-dist.js",
-          "name": "satmain.js",
           "category": "JS",
           "autoCompile": false,
           "uglify": true,
@@ -430,6 +446,36 @@
           "parents": [],
           "type": "javascript"
         },
+        "14b21f83": {
+          "id": "14b21f83",
+          "path": "lib/lightbox.js",
+          "output": "lib/lightbox-dist.js",
+          "name": "lightbox.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "c20fdcfb": {
+          "id": "c20fdcfb",
+          "path": "lib/lightbox.min.js",
+          "output": "lib/lightbox.min-dist.js",
+          "name": "lightbox.min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
         "945cdf9c": {
           "id": "945cdf9c",
           "path": "lib/queue.js",
@@ -535,18 +581,18 @@
           "parents": [],
           "type": "javascript"
         },
-        "38ca0d83": {
-          "id": "38ca0d83",
-          "path": "img/back.png",
-          "output": "img/back.png",
-          "name": "back.png",
+        "5626643b": {
+          "id": "5626643b",
+          "path": "img/arch_cropped.png",
+          "output": "img/arch_cropped.png",
+          "name": "arch_cropped.png",
           "category": "IMAGE",
-          "size": 7104,
+          "size": 188208,
           "type": "png",
-          "initialSize": 7104,
+          "initialSize": 188208,
           "optimized": false,
-          "height": 128,
-          "width": 128
+          "height": 201,
+          "width": 136
         },
         "5f9917a7": {
           "id": "5f9917a7",
@@ -561,18 +607,18 @@
           "height": 201,
           "width": 136
         },
-        "5626643b": {
-          "id": "5626643b",
-          "path": "img/arch_cropped.png",
-          "output": "img/arch_cropped.png",
-          "name": "arch_cropped.png",
+        "38ca0d83": {
+          "id": "38ca0d83",
+          "path": "img/back.png",
+          "output": "img/back.png",
+          "name": "back.png",
           "category": "IMAGE",
-          "size": 188208,
+          "size": 7104,
           "type": "png",
-          "initialSize": 188208,
+          "initialSize": 7104,
           "optimized": false,
-          "height": 201,
-          "width": 136
+          "height": 128,
+          "width": 128
         },
         "559931fa": {
           "id": "559931fa",
@@ -600,19 +646,6 @@
           "height": 374,
           "width": 500
         },
-        "9ab36c77": {
-          "id": "9ab36c77",
-          "path": "img/Background4.jpg",
-          "output": "img/Background4.jpg",
-          "name": "Background4.jpg",
-          "category": "IMAGE",
-          "size": 5026,
-          "type": "jpg",
-          "initialSize": 5026,
-          "optimized": false,
-          "height": 225,
-          "width": 225
-        },
         "11b1d338": {
           "id": "11b1d338",
           "path": "img/Background2.jpg",
@@ -638,6 +671,19 @@
           "optimized": false,
           "height": 250,
           "width": 250
+        },
+        "9ab36c77": {
+          "id": "9ab36c77",
+          "path": "img/Background4.jpg",
+          "output": "img/Background4.jpg",
+          "name": "Background4.jpg",
+          "category": "IMAGE",
+          "size": 5026,
+          "type": "jpg",
+          "initialSize": 5026,
+          "optimized": false,
+          "height": 225,
+          "width": 225
         },
         "cdac7246": {
           "id": "cdac7246",
@@ -678,6 +724,19 @@
           "height": 84,
           "width": 84
         },
+        "477a01c5": {
+          "id": "477a01c5",
+          "path": "img/Clerc_covercropped.png",
+          "output": "img/Clerc_covercropped.png",
+          "name": "Clerc_covercropped.png",
+          "category": "IMAGE",
+          "size": 154937,
+          "type": "png",
+          "initialSize": 154937,
+          "optimized": false,
+          "height": 444,
+          "width": 325
+        },
         "37fdb40e": {
           "id": "37fdb40e",
           "path": "img/forward_simple.png",
@@ -690,6 +749,19 @@
           "optimized": false,
           "height": 32,
           "width": 32
+        },
+        "7cfc8c63": {
+          "id": "7cfc8c63",
+          "path": "img/naked_city.jpg",
+          "output": "img/naked_city.jpg",
+          "name": "naked_city.jpg",
+          "category": "IMAGE",
+          "size": 44346,
+          "type": "jpg",
+          "initialSize": 44346,
+          "optimized": false,
+          "height": 555,
+          "width": 800
         },
         "b2df3b32": {
           "id": "b2df3b32",
@@ -795,6 +867,45 @@
           "height": 32,
           "width": 32
         },
+        "7df2f2e0": {
+          "id": "7df2f2e0",
+          "path": "img/revised_intro_image.png",
+          "output": "img/revised_intro_image.png",
+          "name": "revised_intro_image.png",
+          "category": "IMAGE",
+          "size": 183771,
+          "type": "png",
+          "initialSize": 183771,
+          "optimized": false,
+          "height": 222,
+          "width": 283
+        },
+        "5def029f": {
+          "id": "5def029f",
+          "path": "img/rev_arch_cropped.png",
+          "output": "img/rev_arch_cropped.png",
+          "name": "rev_arch_cropped.png",
+          "category": "IMAGE",
+          "size": 91646,
+          "type": "png",
+          "initialSize": 91646,
+          "optimized": false,
+          "height": 201,
+          "width": 136
+        },
+        "8150c0c4": {
+          "id": "8150c0c4",
+          "path": "img/rev_tiny_arch_cropped.png",
+          "output": "img/rev_tiny_arch_cropped.png",
+          "name": "rev_tiny_arch_cropped.png",
+          "category": "IMAGE",
+          "size": 27871,
+          "type": "png",
+          "initialSize": 27871,
+          "optimized": false,
+          "height": 201,
+          "width": 136
+        },
         "d9b3c529": {
           "id": "d9b3c529",
           "path": "img/skip-back.png",
@@ -846,19 +957,6 @@
           "optimized": false,
           "height": 84,
           "width": 84
-        },
-        "477a01c5": {
-          "id": "477a01c5",
-          "path": "img/Clerc_covercropped.png",
-          "output": "img/Clerc_covercropped.png",
-          "name": "Clerc_covercropped.png",
-          "category": "IMAGE",
-          "size": 154937,
-          "type": "png",
-          "initialSize": 154937,
-          "optimized": false,
-          "height": 444,
-          "width": 325
         },
         "bea8dcd6": {
           "id": "bea8dcd6",
@@ -924,91 +1022,6 @@
           "optimized": false,
           "height": 0,
           "width": 0
-        },
-        "7cfc8c63": {
-          "id": "7cfc8c63",
-          "path": "img/naked_city.jpg",
-          "output": "img/naked_city.jpg",
-          "name": "naked_city.jpg",
-          "category": "IMAGE",
-          "size": 44346,
-          "type": "jpg",
-          "initialSize": 44346,
-          "optimized": false,
-          "height": 555,
-          "width": 800
-        },
-        "14b21f83": {
-          "id": "14b21f83",
-          "path": "lib/lightbox.js",
-          "output": "lib/lightbox-dist.js",
-          "name": "lightbox.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "c20fdcfb": {
-          "id": "c20fdcfb",
-          "path": "lib/lightbox.min.js",
-          "output": "lib/lightbox.min-dist.js",
-          "name": "lightbox.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "35b27952": {
-          "id": "35b27952",
-          "path": "css/lightbox.css",
-          "output": "css/lightbox-dist.css",
-          "name": "lightbox.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "7df2f2e0": {
-          "id": "7df2f2e0",
-          "path": "img/revised_intro_image.png",
-          "output": "img/revised_intro_image.png",
-          "name": "revised_intro_image.png",
-          "category": "IMAGE",
-          "size": 183771,
-          "type": "png",
-          "initialSize": 183771,
-          "optimized": false,
-          "height": 222,
-          "width": 283
-        },
-        "5def029f": {
-          "id": "5def029f",
-          "path": "img/rev_arch_cropped.png",
-          "output": "img/rev_arch_cropped.png",
-          "name": "rev_arch_cropped.png",
-          "category": "IMAGE",
-          "size": 91646,
-          "type": "png",
-          "initialSize": 91646,
-          "optimized": false,
-          "height": 201,
-          "width": 136
         }
       },
       "deploymentHistory": {},
